--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Demo of readsure sharing/comment gating quiz">
   <meta name="author" content="Neal Shyam">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,400italic,500|Roboto+Condensed' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,400italic,500|Roboto+Condensed' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/styles.css">
 
   <!--[if lt IE 9]>
